Fixed poor contrast of chart/table titles

--- a/src/main/web/florence/scss/partials/_workspace.scss
+++ b/src/main/web/florence/scss/partials/_workspace.scss
@@ -321,6 +321,38 @@
 					margin: 0 0 0 5px;
 				}
 			}
+
+			&__item {
+				padding: $lineheight $gutter;
+				position: relative;
+				text-align: right;
+				background-color: $cadet-blue;
+				padding-top: $lineheight / 2;
+				padding-bottom: $lineheight / 2;
+				padding-right: $gutter;
+				padding-left: $gutter - ($gutter / 2);
+				margin-bottom: $lineheight / 2;
+				margin-right: $gutter;
+				margin-left: $gutter;
+				overflow: hidden;
+
+				&__title {
+					width: 50%;
+					border: 3px solid $scarpa-flow;
+					border-radius: 4px;
+					margin: 0 0 0 10px;
+					padding: 7px 5px;
+					float: left;
+					background-color: $white;
+					color: $scarpa-flow;
+					text-align: left;
+					height: auto;
+				}
+
+				button {
+					margin: 0 0 0 5px;
+				}
+			}
 		}
 	}
 }
